Header not fixed on mobile

--- a/themes/dsq/style.less
+++ b/themes/dsq/style.less
@@ -128,7 +128,6 @@ body
 
 #main-content
 {
-	padding-top: @font-size-base * 4.5;
 
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
@@ -370,6 +369,11 @@ and (min-width : 768px) {
 	#main-header
 	{
 		position: fixed;
+	}
+
+	#main-content
+	{
+		padding-top: @font-size-base * 4.5;
 	}
 }
 
